# styletransfer-server

./: .gitlab-ci.yml  .gitmodules  Dockerfile  README.md  config.py  kubernetes_manifest.yml  main.py  pyproject.toml  requirements.txt  test_main.py
controllers/: styletransfer.py
routes/: styletransfer.py  styletransfer_depends.py
src/: config.py  logconf.py  main.py  routes.py  routes_depends.py  styletransfer.py  test_main.py
