[tool.poetry]
name = "styletransfer-server"
version = "0.1.0"
description = "serves simple webapi to deal with style-transfer task based on models whch is able to blend 2 styles."
authors = ["kohei <koheitech001@gmail.com>"]
license = "Apach-2.0"
readme = "README.md"
packages = [{include = "styletransfer_server"}]

[tool.poetry.dependencies]
python = "^3.10"
albumentations = "1.3.0"
anyio = "3.6.2"
attrs = "22.1.0"
certifi = "2022.9.24"
click = "8.1.3"
coloredlogs = "15.0.1"
exceptiongroup = "1.0.4"
flatbuffers = "22.12.6"
h11 = "0.14.0"
httpcore = "0.16.2"
humanfriendly = "10.0"
idna = "3.4"
imageio = "2.22.4"
iniconfig = "1.1.1"
joblib = "1.2.0"
mpmath = "1.2.1"
networkx = "2.8.8"
numpy = "1.23.5"
onnxruntime = "1.13.1"
opencv-python = "4.6.0.66"
opencv-python-headless = "4.6.0.66"
packaging = "21.3"
pillow = "9.3.0"
pluggy = "1.0.0"
protobuf = "4.21.11"
pydantic = "1.10.2"
pyparsing = "3.0.9"
pytest = "7.2.0"
pywavelets = "1.4.1"
pyyaml = "6.0"
qudida = "0.0.4"
rfc3986 = "1.5.0"
scikit-image = "0.19.3"
scikit-learn = "1.2.0"
scipy = "1.9.3"
six = "1.16.0"
sniffio = "1.3.0"
sympy = "1.11.1"
threadpoolctl = "3.1.0"
tifffile = "2022.10.10"
tomli = "2.0.1"
typing-extensions = "4.4.0"
filerouter = {git = "https://github.com/kevin-tofu/FileRouter.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
